--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 <h2><i class="fa fa-newspaper-o"></i>&nbsp;&nbsp;Latest News</h2>
             </A>
             <ul id="latestnews">
-                <details>
+
                 <li> <b>
                         <font color="#FF0000">[2021.07]</font>
                     </b> Dr. Gao was invited as the <b>Associate Editor</b> of IEEE Communications Letters (
@@ -119,7 +119,7 @@
                         <font>马西锁 论文被JSAC(<b>IF=11.42</b>)期刊录用</font>
                     </a>)【模型驱动深度学习的MIMO传输】
                 </li>
-                <summary>View More</summary>
+
                 <li> <b>
                         <font color="#FF0000">[2021.03]</font>
                     </b> Paper of Anwen Liao was accepted by <b>IEEE Journal on Selected Areas in Communications</b>(
@@ -135,35 +135,18 @@
                         <font>万子维 论文被TCOM(<b>IF=5.646</b>)期刊录用</font>
                     </a>)
                 </li>
+                <details>
+                    <summary>View More Earlier News</summary>
+                    <li> <b>
+                            <font color="#FF0000">[2020.12]</font>
+                        </b> Minghui Wu was awarded <b>Second Prize</b> of National Competition of AI (
+                        <a href="https://mp.weixin.qq.com/s/yqaVs5dDe5mQwGoZwIeENA" target="_blank">
+                            <font style="font-family:Microsoft YaHei">吴铭晖 获得全国人工智能大赛二等奖</font>
+                        </a>)
+                    </li>
                 </details>
-
-                <!--<li> <b>
-                        <font color="#FF0000">[2020.12]</font>
-                    </b> Minghui Wu was awarded <b>Second Prize</b> of National Competition of AI (
-                    <a href="https://mp.weixin.qq.com/s/yqaVs5dDe5mQwGoZwIeENA" target="_blank">
-                        <font style="font-family:Microsoft YaHei">吴铭晖 获得全国人工智能大赛二等奖</font>
-                    </a>)
-                </li>
-                -->
-
             </ul>
             <br />
-            <!--
-            <script type="text/javascript">
-                var a = $("<a></a>").on('click', showText).addClass('a-text').text("View More");
-                var b = $("<a></a>").on('click', showText).addClass('a-text').text("View Less");
-                var ul=document.getElementById("latestnews");
-                //var ularr=dv.getElementsByTagName("ul");
-                var liarr=ul.getElementsByTagName("li");
-                console.log(ul)
-                console.log(liarr)
-                var num = liarr.length
-                for(var i = 0; i < num;i++){  
-                    lis[i].οnclick=function(){  
-
-                    }
-                // var liarr=document.getElementById("getli").getElementsByTagName("li");
-            </script>-->
 
             <A NAME="Interest">
                 <h2><i class="fa fa-search" aria-hidden="true"></i>&nbsp;&nbsp;Research Interest</h2>
@@ -184,8 +167,12 @@
             Young Elite Scientists Sponsorship Program from the China Association for Science and Technology, from 2018
             to 2021. He currently serves as an Associate Editor for IEEE Access and IEEE Communications Letters.
             <ul>
-                <li><b><font style="font-size: 18px;">Wireless Communications</font></b></li>
-                <li><b><font style="font-size: 18px;">Channel Estimation of mmWave/THz Hybrid Massive MIMO</font></b></li>
+                <li><b>
+                        <font style="font-size: 18px;">Wireless Communications</font>
+                    </b></li>
+                <li><b>
+                        <font style="font-size: 18px;">Channel Estimation of mmWave/THz Hybrid Massive MIMO</font>
+                    </b></li>
                 To acquire the channel state information (CSI) of millimeter-wave (mmWave) or terahertz (THz) hybrid
                 massive multiple-input-multiple-output (MIMO) systems, the reliable and efficient channel estimation
                 methods with low training overhead and computational
@@ -235,7 +222,9 @@
 
                 <img src="./Files/MIMO_Precoding.jpg" title="Fig. " alt="MIMO" style="display:block; margin:0 auto;">
                 <br>-->
-                <li><b><font style="font-size: 18px;">Sparse Signal Processing</font></b></li>
+                <li><b>
+                        <font style="font-size: 18px;">Sparse Signal Processing</font>
+                    </b></li>
                 Compressed sensing is a signal processing technique for efficiently acquiring and reconstructing a
                 signal, by finding solutions to underdetermined linear systems. This is based on the principle that,
                 through optimization, the sparsity of a signal can
@@ -254,7 +243,9 @@
                 <img src="./Files/Autoencoder_structure.png" title="Fig. " alt="Feature" width="450" height="360"
                     style="display:block; margin:0 auto;">
                 -->
-                <li><b><font style="font-size: 18px;">Deep Learning based Solutions in Wireless Systems</font></b></li>
+                <li><b>
+                        <font style="font-size: 18px;">Deep Learning based Solutions in Wireless Systems</font>
+                    </b></li>
                 The reliable channel estimation for millimeter-wave massive hybrid MIMO systems is indispensable. Based
                 on deep learning, the dominated research directions of channel estimation include <b>
                     <font color="#FF0000">1)</font>
@@ -290,7 +281,9 @@
                 <h2><i class="fa fa-book" aria-hidden="true"></i>&nbsp;&nbsp;Publications</h2>
             </A>
 
-            <p><b><font style="font-size: 18px;">Book Chapters</font></b>: </p>
+            <p><b>
+                    <font style="font-size: 18px;">Book Chapters</font>
+                </b>: </p>
             <font size="3">
                 <ul>
                     <p style="text-indent: -1.5rem;margin-left: 0rem;">
@@ -329,7 +322,9 @@
             <br />
 
 
-            <p><b><font style="font-size: 18px;">Journals</font></b>: </p>
+            <p><b>
+                    <font style="font-size: 18px;">Journals</font>
+                </b>: </p>
             <font size="3">
                 <ul>
                     <p style="text-indent: -2.0rem;margin-left: 0rem;">
@@ -792,7 +787,9 @@
 
 
 
-            <p><b><font style="font-size: 18px;">Conferences</font></b>: </p>
+            <p><b>
+                    <font style="font-size: 18px;">Conferences</font>
+                </b>: </p>
             <font size="3">
                 <ul>
                     <p style="text-indent: -2.0rem;margin-left: 0rem;">
@@ -1010,7 +1007,9 @@
                     <h2><i class="fa fa-pencil-square-o" aria-hidden="true"></i>&nbsp;&nbsp;Services</h2>
                 </A>
 
-                <p><b><font style="font-size: 18px;">Membership</font></b>: </p>
+                <p><b>
+                        <font style="font-size: 18px;">Membership</font>
+                    </b>: </p>
                 <font size="3">
                     <ul>
                         <li>IEEE Member</li>
@@ -1020,7 +1019,9 @@
                 <br />
                 <br />
 
-                <p><b><font style="font-size: 18px;">Associate Editor</font></b>: </p>
+                <p><b>
+                        <font style="font-size: 18px;">Associate Editor</font>
+                    </b>: </p>
                 <font size="3">
                     <ul>
                         <li>IEEE Communications Letters</li>
@@ -1033,7 +1034,9 @@
                 <br />
 
 
-                <p><b><font style="font-size: 18px;">Journal Reviewer</font></b>: </p>
+                <p><b>
+                        <font style="font-size: 18px;">Journal Reviewer</font>
+                    </b>: </p>
                 <font size="3">
                     <ul>
                         <li>IEEE Access</li>
