--- a/index.html
+++ b/index.html
@@ -184,110 +184,64 @@
             to 2021. He currently serves as an Associate Editor for IEEE Access and IEEE Communications Letters.
             <ul>
                 <li><b>
-                        <font style="font-size: 18px;">Wireless Communications</font>
-                    </b></li>
+                        <font style="font-size: 18px;">AI Enabling 6G Communications: Data-Driven or Model-Driven
+                            Learning?</font>
+                    </b>
+                    <details>
+                        <summary>Related Work</summary>
+                        <!--
+                            [R1] X. Ma, Z. Gao, F. Gao, M. D. Renzo, "Model-Driven Deep Learning Based Channel Estimation and Feedback for Millimeter-Wave Massive Hybrid MIMO Systems," in IEEE Journal on Selected Areas in Communications, vol. 39, no. 8, pp. 2388-2406, Aug. 2021. 
+                            [R2] Y. Wang, Z. Gao, J. Zhang, X. Cao, D. Zheng, Y. Gao, D. W. K. Ng, M. D. Renzo, "Trajectory Design for UAV-Based Internet-of-Things Data Collection: A Deep Reinforcement Learning Approach," in IEEE Internet of Things Journal.
+                            [R3] X. Ma, Z. Gao, F. Gao, M. D. Renzo, "Model-Driven Deep Learning Based Channel Estimation and Feedback for Millimeter-Wave Massive Hybrid MIMO Systems," in IEEE Journal on Selected Areas in Communications, vol. 39, no. 8, pp. 2388-2406, Aug. 2021.
+                            [R4] S. Liu, Z. Gao, J. Zhang, M. D. Renzo and M. -S. Alouini, "Deep Denoising Neural Network Assisted Compressive Channel Estimation for mmWave Intelligent Reflecting Surfaces," IEEE Transactions on Vehicular Technology, vol. 69, no. 8, pp. 9223-9228, Aug. 2020.
+                        -->
+                        <p style="text-indent: -2.0rem;margin-left: 0rem;">
+                            <span>[R1] X. Ma, Z. Gao, F. Gao, M. D. Renzo, "Model-Driven Deep Learning Based Channel
+                                Estimation and Feedback for Millimeter-Wave Massive Hybrid MIMO Systems," in IEEE
+                                Journal on Selected Areas in Communications, vol. 39, no. 8, pp. 2388-2406, Aug. 2021.
+                            </span>
+                        </p>
+                        <p style="text-indent: -2.0rem;margin-left: 0rem;">
+                            <span>[R2] Y. Wang, Z. Gao, J. Zhang, X. Cao, D. Zheng, Y. Gao, D. W. K. Ng, M. D. Renzo,
+                                "Trajectory Design for UAV-Based Internet-of-Things Data Collection: A Deep
+                                Reinforcement Learning Approach," in IEEE Internet of Things Journal.
+                            </span>
+                        </p>
+                        <p style="text-indent: -2.0rem;margin-left: 0rem;">
+                            <span>[R3] X. Ma and Z. Gao, "Data-Driven Deep Learning to Design Pilot and Channel
+                                Estimator for Massive MIMO," IEEE Transactions on Vehicular Technology, vol. 69, no. 5,
+                                pp. 5677-5682, May 2020.
+                            </span>
+                        </p>
+                        <p style="text-indent: -2.0rem;margin-left: 0rem;">
+                            <span>[R4] S. Liu, Z. Gao, J. Zhang, M. D. Renzo and M. -S. Alouini, "Deep Denoising Neural
+                                Network Assisted Compressive Channel Estimation for mmWave Intelligent Reflecting
+                                Surfaces," IEEE Transactions on Vehicular Technology, vol. 69, no. 8, pp. 9223-9228,
+                                Aug. 2020.
+                            </span>
+                        </p>
+                    </details>
+                </li>
+
                 <li><b>
-                        <font style="font-size: 18px;">Channel Estimation of mmWave/THz Hybrid Massive MIMO</font>
-                    </b></li>
-                To acquire the channel state information (CSI) of millimeter-wave (mmWave) or terahertz (THz) hybrid
-                massive multiple-input-multiple-output (MIMO) systems, the reliable and efficient channel estimation
-                methods with low training overhead and computational
-                complexity are indispensable. The dominated research directions of hybrid massive MIMO channel
-                estimation include <b>
-                    <font color="#FF0000">1)</font>
-                </b> spectrum estimation theory based channel parameter estimation with the main channel parameters
-                involving angle-of-arrivals/angle-of-departures (AoAs/AoDs), delays, Doppler shifts, and channel gains,
-                etc; <b>
-                    <font color="#FF0000">2)</font>
-                </b> compressed sensing (CS) theory based channel estimation, e.g., greedy algorithms, sparse bayesian
-                learning (SBL), approximate message passing (AMP), etc; <b>
-                    <font color="#FF0000">3)</font>
-                </b> machine learning theory based channel estimation, e.g., expectation-naximization (EM), deep
-                learning neural networks, reinforcement learning, etc.
-                <br>
-                <br>
-                <div align="center">
-                    <img src="./Files/Hybrid_Massive_MIMO_CE.jpg" title="Hybrid_Massive_MIMO_CE" alt="MIMO" height="225"
-                        width="800" style="display:block; margin:0 auto;">
-                </div>
-
-                <br>
-
-                <!--<li>Multicarrier Modulation</li>
-                To exploit wider frequency bands, achieve higher spectrum-efficiency, and even better mitigate the
-                multipath fading effect, multiple carrier communication emerges, and orthogonal frequency-division
-                multiplexing (OFDM) is on of the most commonly used solution. Recently, new modulation techniques have
-                been proposed such as Filter Bank MultiCarrier (FBMC) and Orthogonal Time Frequency and Space (OTFS),
-                whcih can be new opportunities for next generation mobile communications.
-
-                <br>
-                <br>
-                <div align="center">
-                    <img src="./Files/FBMC.jpg" title="Fig. " alt="MIMO" height="300" width="350" hspace="50"
-                        style="margin-right:150 auto;">
-                    <img src="./Files/OTFS.jpg" title="Fig. " alt="MIMO" height="300" width="350" hspace="50"
-                        style="margin-left:150 auto;">
-                </div>
-
-                <br>
-                <li>Multiple Antenna Systems</li>
-                MIMO is a method for multiplying the capacity of a radio link using multiple transmission and receiving
-                antennas to exploit multipath propagation. Precoding, spatial multiplexing, and diversity coding can be
-                achieved by MIMO systems, whereas more challenges need to be solved in the emerging massive MIMO system
-                and Intelligent Reflecting Surface (IRS) which can be equipped with massive elements.
-
-                <img src="./Files/MIMO_Precoding.jpg" title="Fig. " alt="MIMO" style="display:block; margin:0 auto;">
-                <br>-->
+                        <font style="font-size: 18px;">RIS Assisted 6G MIMO</font>
+                    </b>
+                </li>
                 <li><b>
-                        <font style="font-size: 18px;">Sparse Signal Processing</font>
-                    </b></li>
-                Compressed sensing is a signal processing technique for efficiently acquiring and reconstructing a
-                signal, by finding solutions to underdetermined linear systems. This is based on the principle that,
-                through optimization, the sparsity of a signal can
-                be exploited to recover it from far fewer samples than required by the Nyquist–Shannon sampling theorem.
-
-                <img src="./Files/sparse_processing.jpg" title="Fig. " alt="sparse"
-                    style="display:block; margin:0 auto;">
-                <br>
-                <!--
-                <li>Deep Image Compression</li>
-                Wireless channel have similar characteristics with natural images, which makes it possible for channel
-                state information (CSI) to be compressed before feedback. It is also important to effectively improve
-                the reconstruction accuracy and reduce the feedback bits to enhance the overall performance, which
-                requires further research. Autoencoder is one of the most common approaches in blind feature extraction.
-                <img src="./Files/feature.png" title="Fig. " alt="Feature" width="480" height="240">
-                <img src="./Files/Autoencoder_structure.png" title="Fig. " alt="Feature" width="450" height="360"
-                    style="display:block; margin:0 auto;">
-                -->
+                        <font style="font-size: 18px;">MIMO for Integrated space-air-ground-sea networks</font>
+                    </b>
+                </li>
                 <li><b>
-                        <font style="font-size: 18px;">Deep Learning based Solutions in Wireless Systems</font>
-                    </b></li>
-                The reliable channel estimation for millimeter-wave massive hybrid MIMO systems is indispensable. Based
-                on deep learning, the dominated research directions of channel estimation include <b>
-                    <font color="#FF0000">1)</font>
-                    Data-driven deep learning
-                </b>. Inspired by the idea of autoencoder, we propose an end-to-end deep neural network architecture to
-                jointly design the pilot signals and channel estimator. <b>
-                    <font color="#FF0000">2)</font>
-                    Model-driven deep learning
-                </b>. By exploiting the angle-delay domain sparsity, we propose a multiple-measurement-vectors learned
-                approximate message passing (MMV-LAMP) network with the devised redundant dictionary to jointly recover
-                the channel on multiple subcarriers
-                with significantly improved performance.
-                <br>
-                <br>
-                <div align="center">
-                    <img src="./Files/dataDriven.jpg" title="dataDriven" alt="MIMO" height="225" width="600"
-                        style="display:block; margin:0 auto;">
-                </div>
-                <br>
-                <br>
-                <div align="center">
-                    <img src="./Files/modelDriven.jpg" title="modelDriven" alt="MIMO" height="150" width="700"
-                        style="display:block; margin:0 auto;">
-                </div>
+                        <font style="font-size: 18px;">Massive IoT and Machine-Type Communications：From Cloud Computing
+                            to Edge Computing</font>
+                    </b>
+                </li>
+                <li><b>
+                        <font style="font-size: 18px;">Millimeter and Terahertz Massive MIMO：Estimation and Feedback of
+                            CSI and Beamforming</font>
+                    </b>
+                </li>
 
-                <br>
             </ul>
             <br />
 
