--- a/index.html
+++ b/index.html
@@ -200,25 +200,25 @@
                             [R3] X. Ma, Z. Gao, F. Gao, M. D. Renzo, "Model-Driven Deep Learning Based Channel Estimation and Feedback for Millimeter-Wave Massive Hybrid MIMO Systems," in IEEE Journal on Selected Areas in Communications, vol. 39, no. 8, pp. 2388-2406, Aug. 2021.
                             [R4] S. Liu, Z. Gao, J. Zhang, M. D. Renzo and M. -S. Alouini, "Deep Denoising Neural Network Assisted Compressive Channel Estimation for mmWave Intelligent Reflecting Surfaces," IEEE Transactions on Vehicular Technology, vol. 69, no. 8, pp. 9223-9228, Aug. 2020.
                         -->
-                        <p style="text-indent: -2.0rem;margin-left: 0rem;">
+                        <p style="text-indent: -2.0rem;margin-left: 3.0rem;width: 90%">
                             <span>[R1] X. Ma, Z. Gao, F. Gao, M. D. Renzo, "Model-Driven Deep Learning Based Channel
                                 Estimation and Feedback for Millimeter-Wave Massive Hybrid MIMO Systems," in IEEE
                                 Journal on Selected Areas in Communications, vol. 39, no. 8, pp. 2388-2406, Aug. 2021.
                             </span>
                         </p>
-                        <p style="text-indent: -2.0rem;margin-left: 0rem;">
+                        <p style="text-indent: -2.0rem;margin-left: 3.0rem;width: 90%">
                             <span>[R2] Y. Wang, Z. Gao, J. Zhang, X. Cao, D. Zheng, Y. Gao, D. W. K. Ng, M. D. Renzo,
                                 "Trajectory Design for UAV-Based Internet-of-Things Data Collection: A Deep
                                 Reinforcement Learning Approach," in IEEE Internet of Things Journal.
                             </span>
                         </p>
-                        <p style="text-indent: -2.0rem;margin-left: 0rem;">
+                        <p style="text-indent: -2.0rem;margin-left: 3.0rem;width: 90%">
                             <span>[R3] X. Ma and Z. Gao, "Data-Driven Deep Learning to Design Pilot and Channel
                                 Estimator for Massive MIMO," IEEE Transactions on Vehicular Technology, vol. 69, no. 5,
                                 pp. 5677-5682, May 2020.
                             </span>
                         </p>
-                        <p style="text-indent: -2.0rem;margin-left: 0rem;">
+                        <p style="text-indent: -2.0rem;margin-left: 3.0rem;width: 90%">
                             <span>[R4] S. Liu, Z. Gao, J. Zhang, M. D. Renzo and M. -S. Alouini, "Deep Denoising Neural
                                 Network Assisted Compressive Channel Estimation for mmWave Intelligent Reflecting
                                 Surfaces," IEEE Transactions on Vehicular Technology, vol. 69, no. 8, pp. 9223-9228,
