--- a/index.html
+++ b/index.html
@@ -632,6 +632,7 @@
                             vol. 19, no. 10, pp. 6331-6346, Oct. 2020.
                             (<b>SCI Q1 Top, IF=6.779</b>)
                             [<a href="https://ieeexplore.ieee.org/document/9123541" target="_blank">URL</a>]
+                            [<a href="https://arxiv.org/abs/1903.09074v3" target="_blank">arXiv</a>]
                         </span>
                     </p>
 
