--- a/index.html
+++ b/index.html
@@ -596,7 +596,7 @@
                             2021.
                             (<b>SCI Q1 Top, IF=11.42</b>)
                             [<a href="https://ieeexplore.ieee.org/document/9174777" target="_blank">URL</a>]
-                            [<a href="https://arxiv.org/abs/2007.09617" target="_blank">Arxiv</a>]
+                            [<a href="https://arxiv.org/abs/2007.09617" target="_blank">arXiv</a>]
                             [<a href="https://github.com/gaozhen16/Source-Code-M.Ke/tree/main/code_jsac2020"
                                 target="_blank">Code</a>]
                         </span>
@@ -620,7 +620,7 @@
                             2020.
                             (<b>SCI Q2, IF=5.379</b>)
                             [<a href="https://ieeexplore.ieee.org/document/9130957" target="_blank">URL</a>]
-                            [<a href="https://arxiv.org/abs/2003.10180" target="_blank">Arxiv</a>]
+                            [<a href="https://arxiv.org/abs/2003.10180" target="_blank">arXiv</a>]
                             [<a href="https://github.com/gaozhen16/Source-Code-L.Qiao" target="_blank">Code</a>]
                         </span>
                     </p>
@@ -664,7 +664,7 @@
                                 Transactions on Signal Processing</i>, vol. 68, pp. 764-779, 2020.
                             (<b>SCI Q1 Top, IF=5.028</b>)
                             [<a href="https://ieeexplore.ieee.org/document/8961111" target="_blank">URL</a>]
-                            [<a href="https://arxiv.org/abs/1906.09867" target="_blank">Arxiv</a>]
+                            [<a href="https://arxiv.org/abs/1906.09867" target="_blank">arXiv</a>]
                             [<a href="https://github.com/gaozhen16/Source-Code-M.Ke/tree/main/code_tsp2020"
                                 target="_blank">Code</a>]
                         </span>
@@ -925,7 +925,7 @@
                             Computing or Fog Computing?," <i>2020 IEEE International Conference on
                                 Communications (ICC)</i>, Dublin, Ireland, 2020, pp. 1-6.
                             [<a href="https://ieeexplore.ieee.org/document/9148994" target="_blank">URL</a>]
-                            [<a href="https://arxiv.org/abs/2002.02617" target="_blank">Arxiv</a>]
+                            [<a href="https://arxiv.org/abs/2002.02617" target="_blank">arXiv</a>]
                             [<a href="https://github.com/gaozhen16/Source-Code-M.Ke/tree/main/code_icc2020"
                                 target="_blank">Code</a>]
                             [<a href="https://github.com/gaozhen16/Source-Code-M.Ke/blob/main/icc2020_ppt.pdf"
@@ -970,7 +970,7 @@
                                 Information
                                 Processing (GlobalSIP)</i>, Anaheim, CA, USA, 2018, pp. 156-160.(Poster)
                             [<a href="https://ieeexplore.ieee.org/document/8646496" target="_blank">URL</a>]
-                            [<a href="https://arxiv.org/abs/1809.03784" target="_blank">Arxiv</a>]
+                            [<a href="https://arxiv.org/abs/1809.03784" target="_blank">arXiv</a>]
                             [<a href="https://github.com/gaozhen16/Source-Code-M.Ke/tree/main/code_globalsip2018"
                                 target="_blank">Code</a>]
                             [<a href="https://github.com/gaozhen16/Source-Code-M.Ke/blob/main/globalsip2018_poster.pdf"
