--- a/index.html
+++ b/index.html
@@ -190,8 +190,12 @@
                     <div align="center">
                         <img src="./Files/x1.png" title="ai6groadmap" alt="ai6groadmap" width="90%"
                             style="display:block; margin:0 auto;">
-                        <i>Temporarily used for style demo.</i>
+                        <!--<i>Temporarily used for style demo.</i>-->
                     </div>
+                    The recent development of various mobile applications, especially those powered by artificial
+                    intelligence (AI), has sparked a discussion about the future development of wireless
+                    communications. With the global popularization of 5G, industry and science have started their
+                    adventure of future 6G design.
                     <details>
                         <summary>Related Work</summary>
                         <p style="text-indent: -2.0rem;margin-left: 3.0rem;width: 90%">
