--- a/index.html
+++ b/index.html
@@ -192,38 +192,56 @@
                             style="display:block; margin:0 auto;">
                         <!--<i>Temporarily used for style demo.</i>-->
                     </div>
+                    <br />
                     The recent development of various mobile applications, especially those powered by artificial
                     intelligence (AI), has sparked a discussion about the future development of wireless
                     communications. With the global popularization of 5G, industry and science have started their
-                    adventure of future 6G design.
+                    adventure of future 6G design. In wireless communications, <mark>Model-Driven</mark>
+                    <font color="#FF0000">[R1]</font> and
+                    <mark>Data-Driven</mark>
+                    <font color="#FF0000">[R2]</font> methods are proposed in designing <mark>channel estimation,
+                        precoding, and
+                        feedback</mark>, while multiple trials on combining AI with <mark>Intelligent Reflecting
+                        Surfaces (IRS)</mark>
+                    <font color="#FF0000">[R3]</font> or <mark>Unmanned Aerial Vehicles (UAVs)</mark>
+                    <font color="#FF0000">[R4]</font> are being explored here.
                     <details>
                         <summary>Related Work</summary>
                         <p style="text-indent: -2.0rem;margin-left: 3.0rem;width: 90%">
-                            <span>[R1] X. Ma, Z. Gao, F. Gao, M. D. Renzo, "Model-Driven Deep Learning Based Channel
-                                Estimation and Feedback for Millimeter-Wave Massive Hybrid MIMO Systems," in IEEE
-                                Journal on Selected Areas in Communications, vol. 39, no. 8, pp. 2388-2406, Aug. 2021.
+                            <span>
+                                <font color="#FF0000">[R1]</font> X. Ma, Z. Gao, F. Gao, M. D. Renzo, "Model-Driven Deep
+                                Learning Based Channel Estimation and Feedback for Millimeter-Wave Massive Hybrid MIMO
+                                Systems," in IEEE Journal on Selected Areas in Communications, vol. 39, no. 8, pp.
+                                2388-2406, Aug. 2021.
                             </span>
+                        </p>
 
-                        </p>
                         <p style="text-indent: -2.0rem;margin-left: 3.0rem;width: 90%">
-                            <span>[R2] Y. Wang, Z. Gao, J. Zhang, X. Cao, D. Zheng, Y. Gao, D. W. K. Ng, M. D. Renzo,
-                                "Trajectory Design for UAV-Based Internet-of-Things Data Collection: A Deep
-                                Reinforcement Learning Approach," in IEEE Internet of Things Journal.
+                            <span>
+                                <font color="#FF0000">[R2]</font> X. Ma and Z. Gao, "Data-Driven Deep Learning to Design
+                                Pilot and Channel Estimator for Massive MIMO," IEEE Transactions on Vehicular
+                                Technology, vol. 69, no. 5, pp. 5677-5682, May 2020.
                             </span>
                         </p>
+
                         <p style="text-indent: -2.0rem;margin-left: 3.0rem;width: 90%">
-                            <span>[R3] X. Ma and Z. Gao, "Data-Driven Deep Learning to Design Pilot and Channel
-                                Estimator for Massive MIMO," IEEE Transactions on Vehicular Technology, vol. 69, no. 5,
-                                pp. 5677-5682, May 2020.
+                            <span>
+                                <font color="#FF0000">[R3]</font> S. Liu, Z. Gao, J. Zhang, M. D. Renzo and M. -S.
+                                Alouini, "Deep Denoising Neural Network Assisted Compressive Channel Estimation for
+                                mmWave Intelligent Reflecting Surfaces," IEEE Transactions on Vehicular Technology, vol.
+                                69, no. 8, pp. 9223-9228, Aug. 2020.
                             </span>
                         </p>
+
                         <p style="text-indent: -2.0rem;margin-left: 3.0rem;width: 90%">
-                            <span>[R4] S. Liu, Z. Gao, J. Zhang, M. D. Renzo and M. -S. Alouini, "Deep Denoising Neural
-                                Network Assisted Compressive Channel Estimation for mmWave Intelligent Reflecting
-                                Surfaces," IEEE Transactions on Vehicular Technology, vol. 69, no. 8, pp. 9223-9228,
-                                Aug. 2020.
+                            <span>
+                                <font color="#FF0000">[R4]</font> Y. Wang, Z. Gao, J. Zhang, X. Cao, D. Zheng, Y. Gao,
+                                D. W. K. Ng, M. D. Renzo, "Trajectory Design for UAV-Based Internet-of-Things Data
+                                Collection: A Deep Reinforcement Learning Approach," in IEEE Internet of Things Journal.
                             </span>
                         </p>
+
+
                     </details>
                 </li>
 
