--- a/index.html
+++ b/index.html
@@ -251,28 +251,34 @@
                     <div align="center">
                         <img src="./Files/x2.png" title="ris" alt="ris" width="40%"
                             style="display:block; margin:0 auto;">
-                        <i>Temporarily used for style demo.</i>
+                        <!--<i>Temporarily used for style demo.</i>-->
+                        Reconfigurable intelligent surfaces (RISs) are regarded as one of the most promising techniques
+                        for enhancing the spectrum/energy efficiency of wireless systems. <mark>Channel
+                            estimation</mark> of traditional RIS-adied Broadband communication systems has been deeply
+                        investigated <font color="#FF0000">[R1], [R2]</font>, while the <mark>holographic RIS</mark>,
+                        the cutting-edge archetecture of RIS, that supports the next generation <mark>Terahertz</mark>
+                        Massive MIMO communications has also been studied <font color="#FF0000">[R3]</font>.
                     </div>
                     <details>
                         <summary>Related Work</summary>
-                        <p style="text-indent: -2.0rem;margin-left: 3.0rem;width: 90%">
-                            <span>[R1] Z. Wan, Z. Gao, F. Gao, M. D. Renzo, M.-S. Alouini, "Terahertz Massive MIMO with
-                                Holographic Reconfigurable Intelligent Surfaces," in IEEE Transactions on
-                                Communications, vol. 69, no. 7, pp. 4732-4750, July 2021.
-                            </span>
 
-                        </p>
                         <p style="text-indent: -2.0rem;margin-left: 3.0rem;width: 90%">
-                            <span>[R2] S. Liu, Z. Gao, J. Zhang, M. D. Renzo and M. -S. Alouini, "Deep Denoising Neural
+                            <span>[R1] S. Liu, Z. Gao, J. Zhang, M. D. Renzo and M.-S. Alouini, "Deep Denoising Neural
                                 Network Assisted Compressive Channel Estimation for mmWave Intelligent Reflecting
                                 Surfaces," IEEE Transactions on Vehicular Technology, vol. 69, no. 8, pp. 9223-9228,
                                 Aug. 2020.
                             </span>
                         </p>
                         <p style="text-indent: -2.0rem;margin-left: 3.0rem;width: 90%">
-                            <span>[R3] Z. Wan, Z. Gao and M. Alouini, "Broadband Channel Estimation for Intelligent
+                            <span>[R2] Z. Wan, Z. Gao and M.-S. Alouini, "Broadband Channel Estimation for Intelligent
                                 Reflecting Surface Aided mmWave Massive MIMO Systems," 2020 IEEE International
                                 Conference on Communications (ICC), Dublin, Ireland, 2020, pp. 1-6.
+                            </span>
+                        </p>
+                        <p style="text-indent: -2.0rem;margin-left: 3.0rem;width: 90%">
+                            <span>[R3] Z. Wan, Z. Gao, F. Gao, M. D. Renzo, M.-S. Alouini, "Terahertz Massive MIMO with
+                                Holographic Reconfigurable Intelligent Surfaces," in IEEE Transactions on
+                                Communications, vol. 69, no. 7, pp. 4732-4750, July 2021.
                             </span>
                         </p>
                     </details>
