--- a/index.html
+++ b/index.html
@@ -252,13 +252,13 @@
                         <img src="./Files/x2.png" title="ris" alt="ris" width="40%"
                             style="display:block; margin:0 auto;">
                         <!--<i>Temporarily used for style demo.</i>-->
-                        Reconfigurable intelligent surfaces (RISs) are regarded as one of the most promising techniques
-                        for enhancing the spectrum/energy efficiency of wireless systems. <mark>Channel
-                            estimation</mark> of traditional RIS-adied Broadband communication systems has been deeply
-                        investigated <font color="#FF0000">[R1], [R2]</font>, while the <mark>holographic RIS</mark>,
-                        the cutting-edge archetecture of RIS, that supports the next generation <mark>Terahertz</mark>
-                        Massive MIMO communications has also been studied <font color="#FF0000">[R3]</font>.
                     </div>
+                    Reconfigurable intelligent surfaces (RISs) are regarded as one of the most promising techniques for
+                    enhancing the spectrum/energy efficiency of wireless systems. <mark>Channel estimation</mark> of
+                    traditional RIS-adied Broadband communication systems has been deeply investigated <font
+                        color="#FF0000">[R1], [R2]</font>, while the <mark>holographic RIS</mark>, the cutting-edge
+                    archetecture of RIS, that supports the next generation <mark>Terahertz</mark> Massive MIMO
+                    communications has also been studied <font color="#FF0000">[R3]</font>.
                     <details>
                         <summary>Related Work</summary>
 
